# detectproj

./: README.md  detectproj.cpp  detectprojv2.cpp
libalgo/: Makefile.am
libalgo/source/algorithms/angle3points/: Angle3Points.cpp  Angle3Points.h  Angle3Points.hpp
libalgo/source/algorithms/arithmeticparser/: ArithmeticParser.cpp  ArithmeticParser.h  ArithmeticParser.hpp
libalgo/source/algorithms/bearing/: Bearing.cpp  Bearing.h  Bearing.hpp
libalgo/source/algorithms/bisection/: Bisection.h  Bisection.hpp  FV2Bisection.h
libalgo/source/algorithms/bisector/: Bisector.cpp  Bisector.h  Bisector.hpp
libalgo/source/algorithms/cartanalysis/: CartAnalysis.h  CartAnalysis.hpp
libalgo/source/algorithms/cartanalysis2/: CartAnalysis.cpp  CartAnalysis.h  CartAnalysis.hpp
libalgo/source/algorithms/cartdistortion/: CartDistortion.cpp  CartDistortion.h  CartDistortion.hpp
libalgo/source/algorithms/carttransformation/: CartTransformation.h  CartTransformation.hpp
libalgo/source/algorithms/carttransformation2/: CartTransformation.cpp  CartTransformation.h  CartTransformation.hpp
libalgo/source/algorithms/chartonum/: CharToNum.cpp  CharToNum.h  CharToNum.hpp
libalgo/source/algorithms/circle3points/: Circle3Points.cpp  Circle3Points.h  Circle3Points.hpp
libalgo/source/algorithms/convexhull/: ConvexHull.cpp  ConvexHull.h  ConvexHull.hpp
libalgo/source/algorithms/convexquadrilateral/: ConvexQuadrilateral.cpp  ConvexQuadrilateral.h  ConvexQuadrilateral.hpp
libalgo/source/algorithms/eucldistance/: EuclDistance.cpp  EuclDistance.h
libalgo/source/algorithms/facearea/: FaceArea.cpp  FaceArea.h  FaceArea.hpp
libalgo/source/algorithms/faceoverlay/: FaceOverlay.cpp  FaceOverlay.h  FaceOverlay.hpp
libalgo/source/algorithms/faceperimeter/: FacePerimeter.cpp  FacePerimeter.h  FacePerimeter.hpp
libalgo/source/algorithms/geneticalgorithms/: DifferentialEvolution.cpp  DifferentialEvolution.h  DifferentialEvolution.hpp  FAnalyzeProjV2DE.cpp  FAnalyzeProjV2DE.h  FAnalyzeProjV2DEL.cpp  FAnalyzeProjV2DEL.h  FAnalyzeProjV3DE.cpp  FAnalyzeProjV3DE.h  FAnalyzeProjV4DE.cpp  FAnalyzeProjV4DE.h  FAnalyzeProjV4DEL.cpp  FAnalyzeProjV4DEL.h  FAnalyzeProjVDE.cpp  FAnalyzeProjVDE.h  FRM7DE.cpp  FRM7DE.h  FRM8DE.cpp  frm8de.h
libalgo/source/algorithms/graphalgorithms/: GraphAlgorithms.cpp  GraphAlgorithms.h  GraphAlgorithms.hpp
libalgo/source/algorithms/graticule/: Graticule.h  Graticule.hpp
libalgo/source/algorithms/graticule2/: Graticule.cpp  Graticule.hpp  graticule.h
libalgo/source/algorithms/graticule3/: Graticule - kopie.h  Graticule - kopie.hpp  Graticule.h  Graticule.hpp
libalgo/source/algorithms/greatcircleintersection/: GreatCircleIntersection.cpp  GreatCircleIntersection.h  GreatCircleIntersection.hpp
libalgo/source/algorithms/hash/: Hash.cpp  Hash.h  Hash.hpp
libalgo/source/algorithms/innerdistance/: InnerDistance.cpp  InnerDistance.h  InnerDistance.hpp
libalgo/source/algorithms/lawsonorientedwalk/: LawsonOrientedWalk.cpp  LawsonOrientedWalk.h  (+1 more)
libalgo/source/comparators/: addValueToItems.cpp  addValueToItems.h  findMeridianParallelPointIndices.cpp  findMeridianParallelPointIndices.h  getFirstElementInPair.cpp  getFirstElementInPair.h  getResidualXY.cpp  getResidualXY.h  getSecondElementInPair.cpp  getSecondElementInPair.h  indexComp.cpp  indexComp.h  isEqualMeridianParallelPointIndex.cpp  isEqualMeridianParallelPointIndex.h  isEqualPointByPlanarCoordinates.cpp  isEqualPointByPlanarCoordinates.h  removeProjectionPolePositions.cpp  removeProjectionPolePositions.h  removeSimplexHalfEdge.cpp  removeSimplexHalfEdge.h  removeUnequalMeridianParallelPointIndices.cpp  removeUnequalMeridianParallelPointIndices.h  sortFittingLinesByHash.cpp  sortFittingLinesByHash.h  sortKDNodesByPriority.cpp  sortKDNodesByPriority.h  sortMeridiansByLon.cpp  sortMeridiansByLon.h  sortParallelsByLat.cpp  sortParallelsByLat.h  sortPointPairsByDeviation.cpp  sortPointPairsByDeviation.h  sortPointPairsByIndices.cpp  sortPointPairsByIndices.h  sortPointPairsByResiduals.cpp  sortPointPairsByResiduals.h  sortPointsByGravityCenterDistance.cpp  sortPointsByGravityCenterDistance.h  sortPointsByID.cpp  sortPointsByID.h  (+56 more)
libalgo/source/comparators2/: sortPointsByLat.cpp  sortPointsByLat.h  sortPointsByLon.cpp  sortPointsByLon.h
libalgo/source/const/: Const.h
libalgo/source/const2/: Const.h
libalgo/source/exceptions/: BadCastException.cpp  BadCastException.h  BadDataException.cpp  BadDataException.h  BadOutputException.cpp  BadOutputException.h  Exception.h  FileReadException.cpp  FileReadException.h  FileWriteException.cpp  FileWriteException.h  IndexOutOfBoundException.cpp  IndexOutOfBoundException.h  MathAmbiguousValueException.cpp  MathAmbiguousValueException.h  MathException.cpp  MathException.h  MathInvalidArgumentException.cpp  MathInvalidArgumentException.h  MathMatrixDifferentSizeException.cpp  MathMatrixDifferentSizeException.h  MathMatrixException.cpp  MathMatrixException.h  MathMatrixNotPositiveDefiniteException.cpp  MathMatrixNotPositiveDefiniteException.h  MathMatrixNotSquareException.cpp  MathMatrixNotSquareException.h  MathMatrixSingularException.cpp  MathMatrixSingularException.h  MathMatrixSquareException.cpp.bak  MathMatrixSquareException.h.bak  MathOverflowException.cpp  MathOverflowException.h  MathRangeException.cpp  MathRangeException.h  MathUnderflowException.cpp  MathUnderflowException.h  MathZeroDevisionException.cpp  MathZeroDevisionException.h  ParseException.h
libalgo/source/io/: DXFExport.cpp  DXFExport.h  DXFExport.hpp  File.cpp  File.h  File.hpp  Format.cpp  Format.h  Format.hpp  GeoJSONExport.cpp  GeoJSONExport.h  GeoJSONExport.hpp
libalgo/source/io2/: DXFExport.h  DXFExport.hpp  File.cpp  File.h  File.hpp
libalgo/source/types/: PCoordFunction.h  TAdaptiveControl.h  TAnalysisMethod.h  TCholeskyFactorization.h  TDerivativeType.h  TDerivativeVariable.h  TGraticuleError.h  TInterval.h  TInterval2D.h  TList.h  TListS.h  TMutationStrategy.h  TResult.h  TResults.h  TTransformationKeyHelmert2D.h  TTransformedLongitudeDirection.h  TVector.h  TVector2D.h  Types.h
(+297 files in other folders)
