AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = --pedantic -Wall -std=c++11
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libalgo.la

libalgo_la_SOURCES = ./libalgo/source/comparators/getFirstElementInPair.cpp \
    ./libalgo/source/comparators/sortSamplesByGNTurningFunctionRatio.cpp \
    ./libalgo/source/comparators/sortPointPairsByIndices.cpp \
    ./libalgo/source/comparators/sortPointsByLat.cpp \
    ./libalgo/source/comparators/findMeridianParallelPointIndices.cpp \
    ./libalgo/source/comparators/sortPointsIndicesByX.cpp \
    ./libalgo/source/comparators/sortSamplesByAngularDifferencesRatio.cpp \
    ./libalgo/source/comparators/sortSamplesBySphereOfInfluenceGraphRatio.cpp \
    ./libalgo/source/comparators/sortMeridiansByLon.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellAreaLengthRatio.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatio.cpp \
    ./libalgo/source/comparators/addValueToItems.cpp \
    ./libalgo/source/comparators/removeSimplexHalfEdge.cpp \
    ./libalgo/source/comparators/getResidualXY.cpp \
    ./libalgo/source/comparators/sortProjectionAspectsByCompCriterium.cpp \
    ./libalgo/source/comparators/sortPointPairsByDeviation.cpp \
    ./libalgo/source/comparators/sortFittingLinesByHash.cpp \
    ./libalgo/source/comparators/isEqualMeridianParallelPointIndex.cpp \
    ./libalgo/source/comparators/sortSamplesByAverageNearestNeighbourDistanceRatio.cpp \
    ./libalgo/source/comparators/removeUnequalMeridianParallelPointIndices.cpp \
    ./libalgo/source/comparators/sortSamplesByCrossNearestNeighbourDistanceRatio.cpp \
    ./libalgo/source/comparators/sortPointsToBins.cpp \
    ./libalgo/source/comparators/sortSamplesByHomotheticTransformationRatio.cpp \
    ./libalgo/source/comparators/getSecondElementInPair.cpp \
    ./libalgo/source/comparators/sortSamplesByTurningFunctionRatio.cpp \
    ./libalgo/source/comparators/sortPointsByY.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTangentFunctionRatio.cpp \
    ./libalgo/source/comparators/removeProjectionPolePositions.cpp \
    ./libalgo/source/comparators/sortProjectionPolePositionsByLat.cpp \
    ./libalgo/source/comparators/sortSamplesByTangentFunctionRatio.cpp \
    ./libalgo/source/comparators/sortParallelsByLat.cpp \
    ./libalgo/source/comparators/indexComp.cpp \
    ./libalgo/source/comparators/sortPointPairsByResiduals.cpp \
    ./libalgo/source/comparators/sortProjectionPolePositionsByCompCriterium.cpp \
    ./libalgo/source/comparators/isEqualPointByPlanarCoordinates.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatioPosition.cpp \
    ./libalgo/source/comparators/sortPointsByID.cpp \
    ./libalgo/source/comparators/sortSamplesByAllRatios.cpp \
    ./libalgo/source/comparators/sortPointsByGravityCenterDistance.cpp \
    ./libalgo/source/comparators/sortPointsByLon.cpp \
    ./libalgo/source/comparators/sortSamplesByHelmertTransformationRatio.cpp \
    ./libalgo/source/comparators/sortPointsIndicesByY.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTurningFunctionRatio.cpp \
    ./libalgo/source/comparators/sortSamplesByGabrielGraphRatio.cpp \
    ./libalgo/source/comparators/sortPointsByX.cpp \
    ./libalgo/source/comparators/sortKDNodesByPriority.cpp \
    ./libalgo/source/comparators/sortSamplesByNNNGraphRatio.cpp \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellInnerDistanceRatio.cpp \
    ./libalgo/source/comparators/sortProjectionAspectsByCartPole.cpp \
    ./libalgo/source/exceptions/ErrorParse.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrix.cpp \
    ./libalgo/source/exceptions/ErrorMathZeroDevision.cpp \
    ./libalgo/source/exceptions/ErrorMathAmbiguousValue.cpp \
    ./libalgo/source/exceptions/ErrorMathInvalidArgument.cpp \
    ./libalgo/source/exceptions/ErrorMathUnderflow.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrixDifferentSize.cpp \
    ./libalgo/source/exceptions/ErrorBadData.cpp \
    ./libalgo/source/exceptions/ErrorIndexOutOfBound.cpp \
    ./libalgo/source/exceptions/ErrorFileWrite.cpp \
    ./libalgo/source/exceptions/ErrorFileRead.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrixNotPositiveDefinite.cpp \
    ./libalgo/source/exceptions/Error.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrixSquare.cpp \
    ./libalgo/source/exceptions/ErrorBadOutput.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrixNotSquare.cpp \
    ./libalgo/source/exceptions/ErrorMathMatrixSingular.cpp \
    ./libalgo/source/exceptions/ErrorMathOverflow.cpp \
    ./libalgo/source/exceptions/ErrorMathRange.cpp \
    ./libalgo/source/exceptions/ErrorMath.cpp \
    ./libalgo/source/exceptions/ErrorBadCast.cpp \
    ./libalgo/source/algorithms/linelineangle/LineLineAngle.cpp \
    ./libalgo/source/algorithms/bisection/Bisection.cpp \
    ./libalgo/source/algorithms/shapecontext/ShapeContext.cpp \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV4S.cpp \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjVS.cpp \
    ./libalgo/source/algorithms/simplexmethod/SimplexMethod.cpp \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV3S.cpp \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV2S.cpp \
    ./libalgo/source/algorithms/arithmeticparser/ArithmeticParser.cpp \
    ./libalgo/source/algorithms/simpleface/SimpleFace.cpp \
    ./libalgo/source/algorithms/circle3points/Circle3Points.cpp \
    ./libalgo/source/algorithms/bisector/Bisector.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/NonLinearLeastSquares.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV3.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ2.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjC.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ4.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV2.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV4.cpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ3.cpp \
    ./libalgo/source/algorithms/lawsonorientedwalk/LawsonOrientedWalk.cpp \
    ./libalgo/source/algorithms/pointbetweenpoints/PointBetweenPoints.cpp \
    ./libalgo/source/algorithms/pointfaceposition/PointFacePosition.cpp \
    ./libalgo/source/algorithms/transformation/HelmertTransformation2D.cpp \
    ./libalgo/source/algorithms/transformation/HomotheticTransformation2D.cpp \
    ./libalgo/source/algorithms/transformation/Transformation2D.cpp \
    ./libalgo/source/algorithms/matrixoperations/MatrixOperations.cpp \
    ./libalgo/source/algorithms/leastsquaresfitting/LeastSquaresFitting.cpp \
    ./libalgo/source/algorithms/turningfunction/TurningFunction.cpp \
    ./libalgo/source/algorithms/swappingcriteria/SwappingCriteria.cpp \
    ./libalgo/source/algorithms/facearea/FaceArea.cpp \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative2Var.cpp \
    ./libalgo/source/algorithms/numderivative/NumDerivative.cpp \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative5Var.cpp \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative1Var.cpp \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative6Var.cpp \
    ./libalgo/source/algorithms/pointellipseposition/PointEllipsePosition.cpp \
    ./libalgo/source/algorithms/ransac/Ransac.cpp \
    ./libalgo/source/algorithms/graticule/Graticule.cpp \
    ./libalgo/source/algorithms/nndistance/NNDistance.cpp \
    ./libalgo/source/algorithms/faceperimeter/FacePerimeter.cpp \
    ./libalgo/source/algorithms/pointlinedistance/PointLineDistance.cpp \
    ./libalgo/source/algorithms/polylinelength/PolyLineLength.cpp \
    ./libalgo/source/algorithms/voronoi2D/Voronoi2D.cpp \
    ./libalgo/source/algorithms/bearing/Bearing.cpp \
    ./libalgo/source/algorithms/faceoverlay/FaceOverlay.cpp \
    ./libalgo/source/algorithms/innerdistance/InnerDistance.cpp \
    ./libalgo/source/algorithms/tarcriterion/TARCriterion.cpp \
    ./libalgo/source/algorithms/triangulations2D/CDT2D.cpp \
    ./libalgo/source/algorithms/triangulations2D/DT2D.cpp \
    ./libalgo/source/algorithms/triangulations2D/DDT2D.cpp \
    ./libalgo/source/algorithms/tangentfunction/TangentFunction.cpp \
    ./libalgo/source/algorithms/round/Round.cpp \
    ./libalgo/source/algorithms/outliers/Outliers.cpp \
    ./libalgo/source/algorithms/projectiontoproj4/ProjectionToProj4.cpp \
    ./libalgo/source/algorithms/convexhull/ConvexHull.cpp \
    ./libalgo/source/algorithms/cartanalysis/CartAnalysis.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV4DE.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV2DE.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjVDE.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV2DEL.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/DifferentialEvolution.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV4DEL.cpp \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV3DE.cpp \
    ./libalgo/source/algorithms/carttransformation/CartTransformation.cpp \
    ./libalgo/source/algorithms/linelineposition/LineLinePosition.cpp \
    ./libalgo/source/algorithms/trianglearea/TriangleArea.cpp \
    ./libalgo/source/algorithms/pointlineposition/PointLinePosition.cpp \
    ./libalgo/source/algorithms/hash/Hash.cpp \
    ./libalgo/source/algorithms/graphalgorithms/GraphAlgorithms.cpp \
    ./libalgo/source/algorithms/cartdistortion/CartDistortion.cpp \
    ./libalgo/source/algorithms/randompermutation/RandomPermutation.cpp \
    ./libalgo/source/algorithms/convexquadrilateral/ConvexQuadrilateral.cpp \
    ./libalgo/source/algorithms/vectorvectororientation/VectorVectorOrientation.cpp \
    ./libalgo/source/algorithms/angle3points/Angle3Points.cpp \
    ./libalgo/source/algorithms/eucldistance/EuclDistance.cpp \
    ./libalgo/source/structures/point/Point3DGeographic.cpp \
    ./libalgo/source/structures/point/Node3DCartesianProjected.cpp \
    ./libalgo/source/structures/point/Point3DCartesian.cpp \
    ./libalgo/source/structures/point/Point3DCartesianProjected.cpp \
    ./libalgo/source/structures/point/Node3DCartesian.cpp \
    ./libalgo/source/structures/projection/ProjectionPseudoConic.cpp \
    ./libalgo/source/structures/projection/ProjectionPseudoAzimuthal.cpp \
    ./libalgo/source/structures/projection/ProjectionAzimuthal.cpp \
    ./libalgo/source/structures/projection/ProjectionPseudoCylindrical.cpp \
    ./libalgo/source/structures/projection/Projection.cpp \
    ./libalgo/source/structures/projection/ProjectionMiscellaneous.cpp \
    ./libalgo/source/structures/projection/ProjectionCylindrical.cpp \
    ./libalgo/source/structures/projection/Sample.cpp \
    ./libalgo/source/structures/projection/ProjectionPolyConic.cpp \
    ./libalgo/source/structures/projection/ProjectionConic.cpp \
    ./libalgo/source/structures/projection/ProjectionEllipsoidal.cpp \
    ./libalgo/source/structures/line/Parallel.cpp \
    ./libalgo/source/structures/line/HalfEdge.cpp \
    ./libalgo/source/structures/line/Edge.cpp \
    ./libalgo/source/structures/line/PolyLine.cpp \
    ./libalgo/source/structures/line/Meridian.cpp \
    ./libalgo/source/structures/matrix/Matrix.cpp \
    ./libalgo/source/structures/tree/KDNode.cpp \
    ./libalgo/source/structures/tree/KDTree.cpp \
    ./libalgo/source/structures/graph/GraphL.cpp \
    ./libalgo/source/structures/graph/GraphEdgeA.cpp \
    ./libalgo/source/structures/graph/GraphM.cpp \
    ./libalgo/source/structures/graph/Graph.cpp \
    ./libalgo/source/structures/graph/GraphEdge.cpp \
    ./libalgo/source/structures/graph/GraphA.cpp \
    ./libalgo/source/structures/list/Container.cpp \
    ./libalgo/source/structures/list/GenericContainer2.cpp \
    ./libalgo/source/structures/list/GenericContainer.cpp \
    ./libalgo/source/structures/face/VoronoiCell.cpp \
    ./libalgo/source/structures/face/Face.cpp \
    ./libalgo/source/io/File.cpp \
    ./libalgo/source/io/GeoJSONExport.cpp \
    ./libalgo/source/io/Format.cpp \
    ./libalgo/source/io/DXFExport.cpp

nobase_include_HEADERS = ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatio.h \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTangentFunctionRatio.h \
    ./libalgo/source/comparators/sortSamplesByTangentFunctionRatio.h \
    ./libalgo/source/comparators/sortPointsByY.h \
    ./libalgo/source/comparators/sortPointsByX.h \
    ./libalgo/source/comparators/sortKDNodesByPriority.h \
    ./libalgo/source/comparators/sortPointPairsByDeviation.h \
    ./libalgo/source/comparators/removeUnequalMeridianParallelPointIndices.h \
    ./libalgo/source/comparators/getSecondElementInPair.h \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellInnerDistanceRatio.h \
    ./libalgo/source/comparators/sortPointPairsByIndices.h \
    ./libalgo/source/comparators/sortSamplesByAverageNearestNeighbourDistanceRatio.h \
    ./libalgo/source/comparators/removeProjectionPolePositions.h \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellAreaLengthRatio.h \
    ./libalgo/source/comparators/sortFittingLinesByHash.h \
    ./libalgo/source/comparators/removeSimplexHalfEdge.h \
    ./libalgo/source/comparators/sortSamplesByHomotheticTransformationRatio.h \
    ./libalgo/source/comparators/sortProjectionPolePositionsByLat.h \
    ./libalgo/source/comparators/sortProjectionAspectsByCartPole.h \
    ./libalgo/source/comparators/sortPointsByLat.h \
    ./libalgo/source/comparators/sortPointPairsByResiduals.h \
    ./libalgo/source/comparators/sortMeridiansByLon.h \
    ./libalgo/source/comparators/sortSamplesByHelmertTransformationRatio.h \
    ./libalgo/source/comparators/sortSamplesByGNTurningFunctionRatio.h \
    ./libalgo/source/comparators/sortSamplesByNNNGraphRatio.h \
    ./libalgo/source/comparators/sortPointsByID.h \
    ./libalgo/source/comparators/sortSamplesByAllRatios.h \
    ./libalgo/source/comparators/isEqualPointByPlanarCoordinates.h \
    ./libalgo/source/comparators/sortPointsToBins.h \
    ./libalgo/source/comparators/sortParallelsByLat.h \
    ./libalgo/source/comparators/getFirstElementInPair.h \
    ./libalgo/source/comparators/isEqualMeridianParallelPointIndex.h \
    ./libalgo/source/comparators/sortPointsByGravityCenterDistance.h \
    ./libalgo/source/comparators/sortPointsIndicesByX.h \
    ./libalgo/source/comparators/getResidualXY.h \
    ./libalgo/source/comparators/sortPointsByLon.h \
    ./libalgo/source/comparators/sortSamplesBySphereOfInfluenceGraphRatio.h \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatioPosition.h \
    ./libalgo/source/comparators/indexComp.h \
    ./libalgo/source/comparators/sortProjectionAspectsByCompCriterium.h \
    ./libalgo/source/comparators/sortSamplesByTurningFunctionRatio.h \
    ./libalgo/source/comparators/sortSamplesByAngularDifferencesRatio.h \
    ./libalgo/source/comparators/addValueToItems.h \
    ./libalgo/source/comparators/sortProjectionPolePositionsByCompCriterium.h \
    ./libalgo/source/comparators/sortSamplesByCrossNearestNeighbourDistanceRatio.h \
    ./libalgo/source/comparators/sortPointsIndicesByY.h \
    ./libalgo/source/comparators/sortSamplesByGabrielGraphRatio.h \
    ./libalgo/source/comparators/findMeridianParallelPointIndices.h \
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTurningFunctionRatio.h \
    ./libalgo/source/exceptions/ErrorMathRange.h \
    ./libalgo/source/exceptions/ErrorMathMatrixNotPositiveDefinite.h \
    ./libalgo/source/exceptions/ErrorMathAmbiguousValue.h \
    ./libalgo/source/exceptions/ErrorFileWrite.h \
    ./libalgo/source/exceptions/ErrorBadData.h \
    ./libalgo/source/exceptions/ErrorMathMatrixSingular.h \
    ./libalgo/source/exceptions/ErrorMathMatrixNotSquare.h \
    ./libalgo/source/exceptions/ErrorParse.h \
    ./libalgo/source/exceptions/ErrorBadOutput.h \
    ./libalgo/source/exceptions/ErrorMathUnderflow.h \
    ./libalgo/source/exceptions/ErrorMathOverflow.h \
    ./libalgo/source/exceptions/ErrorMathMatrixDifferentSize.h \
    ./libalgo/source/exceptions/ErrorMathMatrix.h \
    ./libalgo/source/exceptions/ErrorBadCast.h \
    ./libalgo/source/exceptions/ErrorFileRead.h \
    ./libalgo/source/exceptions/Error.h \
    ./libalgo/source/exceptions/ErrorMathMatrixSquare.h \
    ./libalgo/source/exceptions/ErrorMath.h \
    ./libalgo/source/exceptions/ErrorMathZeroDevision.h \
    ./libalgo/source/exceptions/ErrorIndexOutOfBound.h \
    ./libalgo/source/exceptions/ErrorMathInvalidArgument.h \
    ./libalgo/source/algorithms/linelineangle/LineLineAngle.h \
    ./libalgo/source/algorithms/bisection/FV2Bisection.h \
    ./libalgo/source/algorithms/bisection/Bisection.h \
    ./libalgo/source/algorithms/shapecontext/ShapeContext.h \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV4S.h \
    ./libalgo/source/algorithms/simplexmethod/SimplexMethod.h \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV3S.h \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV2S.h \
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjVS.h \
    ./libalgo/source/algorithms/arithmeticparser/ArithmeticParser.h \
    ./libalgo/source/algorithms/simpleface/SimpleFace.h \
    ./libalgo/source/algorithms/circle3points/Circle3Points.h \
    ./libalgo/source/algorithms/bisector/Bisector.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ3.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV4.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ4.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ2.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjC.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV3.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV2.h \
    ./libalgo/source/algorithms/nonlinearleastsquares/NonLinearLeastSquares.h \
    ./libalgo/source/algorithms/lawsonorientedwalk/LawsonOrientedWalk.h \
    ./libalgo/source/algorithms/pointbetweenpoints/PointBetweenPoints.h \
    ./libalgo/source/algorithms/pointfaceposition/PointFacePosition.h \
    ./libalgo/source/algorithms/transformation/Transformation2D.h \
    ./libalgo/source/algorithms/transformation/HomotheticTransformation2D.h \
    ./libalgo/source/algorithms/transformation/HelmertTransformation2D.h \
    ./libalgo/source/algorithms/matrixoperations/MatrixOperations.h \
    ./libalgo/source/algorithms/leastsquaresfitting/LeastSquaresFitting.h \
    ./libalgo/source/algorithms/turningfunction/TurningFunction.h \
    ./libalgo/source/algorithms/swappingcriteria/SwappingCriteria.h \
    ./libalgo/source/algorithms/facearea/FaceArea.h \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative6Var.h \
    ./libalgo/source/algorithms/numderivative/NumDerivative.h \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative1Var.h \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative5Var.h \
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative2Var.h \
    ./libalgo/source/algorithms/pointellipseposition/PointEllipsePosition.h \
    ./libalgo/source/algorithms/ransac/Ransac.h \
    ./libalgo/source/algorithms/graticule/Graticule.h \
    ./libalgo/source/algorithms/nndistance/NNDistance.h \
    ./libalgo/source/algorithms/faceperimeter/FacePerimeter.h \
    ./libalgo/source/algorithms/pointlinedistance/PointLineDistance.h \
    ./libalgo/source/algorithms/polylinelength/PolyLineLength.h \
    ./libalgo/source/algorithms/voronoi2D/Voronoi2D.h \
    ./libalgo/source/algorithms/bearing/Bearing.h \
    ./libalgo/source/algorithms/faceoverlay/FaceOverlay.h \
    ./libalgo/source/algorithms/innerdistance/InnerDistance.h \
    ./libalgo/source/algorithms/tarcriterion/TARCriterion.h \
    ./libalgo/source/algorithms/triangulations2D/DDT2D.h \
    ./libalgo/source/algorithms/triangulations2D/DT2D.h \
    ./libalgo/source/algorithms/triangulations2D/CDT2D.h \
    ./libalgo/source/algorithms/tangentfunction/TangentFunction.h \
    ./libalgo/source/algorithms/round/Round.h \
    ./libalgo/source/algorithms/outliers/Outliers.h \
    ./libalgo/source/algorithms/projectiontoproj4/ProjectionToProj4.h \
    ./libalgo/source/algorithms/convexhull/ConvexHull.h \
    ./libalgo/source/algorithms/cartanalysis/CartAnalysis.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV2DEL.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV4DE.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV2DE.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjVDE.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV4DEL.h \
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV3DE.h \
    ./libalgo/source/algorithms/geneticalgorithms/DifferentialEvolution.h \
    ./libalgo/source/algorithms/carttransformation/CartTransformation.h \
    ./libalgo/source/algorithms/linelineposition/LineLinePosition.h \
    ./libalgo/source/algorithms/trianglearea/TriangleArea.h \
    ./libalgo/source/algorithms/pointlineposition/PointLinePosition.h \
    ./libalgo/source/algorithms/hash/Hash.h \
    ./libalgo/source/algorithms/graphalgorithms/GraphAlgorithms.h \
    ./libalgo/source/algorithms/cartdistortion/CartDistortion.h \
    ./libalgo/source/algorithms/randompermutation/RandomPermutation.h \
    ./libalgo/source/algorithms/convexquadrilateral/ConvexQuadrilateral.h \
    ./libalgo/source/algorithms/vectorvectororientation/VectorVectorOrientation.h \
    ./libalgo/source/algorithms/angle3points/Angle3Points.h \
    ./libalgo/source/algorithms/eucldistance/EuclDistance.h \
    ./libalgo/source/const/Const.h \
    ./libalgo/source/structures/point/Point3DCartesian.h \
    ./libalgo/source/structures/point/Point3DGeographic.h \
    ./libalgo/source/structures/point/Point3DCartesianProjected.h \
    ./libalgo/source/structures/point/Node3DCartesianProjected.h \
    ./libalgo/source/structures/point/Node3DCartesian.h \
    ./libalgo/source/structures/projection/Sample.h \
    ./libalgo/source/structures/projection/ProjectionPolyConic.h \
    ./libalgo/source/structures/projection/ProjectionEllipsoidal.h \
    ./libalgo/source/structures/projection/ProjectionPseudoCylindrical.h \
    ./libalgo/source/structures/projection/ProjectionMiscellaneous.h \
    ./libalgo/source/structures/projection/ProjectionPseudoConic.h \
    ./libalgo/source/structures/projection/ProjectionConic.h \
    ./libalgo/source/structures/projection/ProjectionPseudoAzimuthal.h \
    ./libalgo/source/structures/projection/Projection.h \
    ./libalgo/source/structures/projection/Projection_bak.h \
    ./libalgo/source/structures/projection/ProjectionAzimuthal.h \
    ./libalgo/source/structures/projection/ProjectionCylindrical.h \
    ./libalgo/source/structures/line/PolyLine.h \
    ./libalgo/source/structures/line/Edge.h \
    ./libalgo/source/structures/line/HalfEdge.h \
    ./libalgo/source/structures/line/Parallel.h \
    ./libalgo/source/structures/line/Meridian.h \
    ./libalgo/source/structures/matrix/Matrix.h \
    ./libalgo/source/structures/tree/KDTree.h \
    ./libalgo/source/structures/tree/KDNode.h \
    ./libalgo/source/structures/graph/GraphM.h \
    ./libalgo/source/structures/graph/GraphEdgeA.h \
    ./libalgo/source/structures/graph/GraphL.h \
    ./libalgo/source/structures/graph/Graph.h \
    ./libalgo/source/structures/graph/GraphEdge.h \
    ./libalgo/source/structures/graph/GraphA.h \
    ./libalgo/source/structures/list/IndexLists.h \
    ./libalgo/source/structures/list/GenericContainer.h \
    ./libalgo/source/structures/list/GenericContainer2.h \
    ./libalgo/source/structures/list/Container.h \
    ./libalgo/source/structures/face/VoronoiCell.h \
    ./libalgo/source/structures/face/Face.h \
    ./libalgo/source/io/DXFExport.h \
    ./libalgo/source/io/File.h \
    ./libalgo/source/io/Format.h \
    ./libalgo/source/io/GeoJSONExport.h \
    ./libalgo/source/algorithms/linelineangle/LineLineAngle.hpp \
    ./libalgo/source/algorithms/bisection/Bisection.hpp \
    ./libalgo/source/algorithms/shapecontext/ShapeContext.hpp \
    ./libalgo/source/algorithms/simplexmethod/SimplexMethod.hpp \
    ./libalgo/source/algorithms/arithmeticparser/ArithmeticParser.hpp \
    ./libalgo/source/algorithms/simpleface/SimpleFace.hpp \
    ./libalgo/source/algorithms/circle3points/Circle3Points.hpp \
    ./libalgo/source/algorithms/bisector/Bisector.hpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/NonLinearLeastSquares.hpp \
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV2.hpp \
    ./libalgo/source/algorithms/lawsonorientedwalk/LawsonOrientedWalk.hpp \
    ./libalgo/source/algorithms/pointbetweenpoints/PointBetweenPoints.hpp \
    ./libalgo/source/algorithms/pointfaceposition/PointFacePosition.hpp \
    ./libalgo/source/algorithms/transformation/Transformation2D.hpp \
    ./libalgo/source/algorithms/transformation/HelmertTransformation2D.hpp \
    ./libalgo/source/algorithms/transformation/HomotheticTransformation2D.hpp \
    ./libalgo/source/algorithms/matrixoperations/MatrixOperations.hpp \
    ./libalgo/source/algorithms/leastsquaresfitting/LeastSquaresFitting.hpp \
    ./libalgo/source/algorithms/turningfunction/TurningFunction.hpp \
    ./libalgo/source/algorithms/swappingcriteria/SwappingCriteria.hpp \
    ./libalgo/source/algorithms/facearea/FaceArea.hpp \
    ./libalgo/source/algorithms/numderivative/NumDerivative.hpp \
    ./libalgo/source/algorithms/pointellipseposition/PointEllipsePosition.hpp \
    ./libalgo/source/algorithms/ransac/Ransac.hpp \
    ./libalgo/source/algorithms/graticule/Graticule.hpp \
    ./libalgo/source/algorithms/nndistance/NNDistance.hpp \
    ./libalgo/source/algorithms/faceperimeter/FacePerimeter.hpp \
    ./libalgo/source/algorithms/pointlinedistance/PointLineDistance.hpp \
    ./libalgo/source/algorithms/polylinelength/PolyLineLength.hpp \
    ./libalgo/source/algorithms/voronoi2D/Voronoi2D.hpp \
    ./libalgo/source/algorithms/bearing/Bearing.hpp \
    ./libalgo/source/algorithms/faceoverlay/FaceOverlay.hpp \
    ./libalgo/source/algorithms/innerdistance/InnerDistance.hpp \
    ./libalgo/source/algorithms/tarcriterion/TARCriterion.hpp \
    ./libalgo/source/algorithms/triangulations2D/DT2D.hpp \
    ./libalgo/source/algorithms/triangulations2D/CDT2D.hpp \
    ./libalgo/source/algorithms/triangulations2D/DDT2D.hpp \
    ./libalgo/source/algorithms/tangentfunction/TangentFunction.hpp \
    ./libalgo/source/algorithms/round/Round.hpp \
    ./libalgo/source/algorithms/outliers/Outliers.hpp \
    ./libalgo/source/algorithms/projectiontoproj4/ProjectionToProj4.hpp \
    ./libalgo/source/algorithms/convexhull/ConvexHull.hpp \
    ./libalgo/source/algorithms/cartanalysis/CartAnalysis.hpp \
    ./libalgo/source/algorithms/geneticalgorithms/DifferentialEvolution.hpp \
    ./libalgo/source/algorithms/carttransformation/CartTransformation.hpp \
    ./libalgo/source/algorithms/linelineposition/LineLinePosition.hpp \
    ./libalgo/source/algorithms/trianglearea/TriangleArea.hpp \
    ./libalgo/source/algorithms/pointlineposition/PointLinePosition.hpp \
    ./libalgo/source/algorithms/hash/Hash.hpp \
    ./libalgo/source/algorithms/graphalgorithms/GraphAlgorithms.hpp \
    ./libalgo/source/algorithms/cartdistortion/CartDistortion.hpp \
    ./libalgo/source/algorithms/randompermutation/RandomPermutation.hpp \
    ./libalgo/source/algorithms/convexquadrilateral/ConvexQuadrilateral.hpp \
    ./libalgo/source/algorithms/vectorvectororientation/VectorVectorOrientation.hpp \
    ./libalgo/source/algorithms/angle3points/Angle3Points.hpp \
    ./libalgo/source/structures/point/Point3DCartesianProjected.hpp \
    ./libalgo/source/structures/point/Point3DGeographic.hpp \
    ./libalgo/source/structures/point/Node3DCartesianProjected.hpp \
    ./libalgo/source/structures/point/Node3DCartesian.hpp \
    ./libalgo/source/structures/point/Point3DCartesian.hpp \
    ./libalgo/source/structures/projection/Projection.hpp \
    ./libalgo/source/structures/projection/ProjectionPseudoCylindrical.hpp \
    ./libalgo/source/structures/projection/Sample.hpp \
    ./libalgo/source/structures/line/HalfEdge.hpp \
    ./libalgo/source/structures/line/Parallel.hpp \
    ./libalgo/source/structures/line/Meridian.hpp \
    ./libalgo/source/structures/line/PolyLine.hpp \
    ./libalgo/source/structures/matrix/Matrix.hpp \
    ./libalgo/source/structures/tree/KDTree.hpp \
    ./libalgo/source/structures/graph/GraphM.hpp \
    ./libalgo/source/structures/list/IndexLists.hpp \
    ./libalgo/source/structures/list/Container.hpp \
    ./libalgo/source/structures/list/GenericContainer2.hpp \
    ./libalgo/source/structures/list/GenericContainer.hpp \
    ./libalgo/source/structures/face/Face.hpp \
    ./libalgo/source/structures/face/VoronoiCell.hpp \
    ./libalgo/source/io/DXFExport.hpp \
    ./libalgo/source/io/Format.hpp \
    ./libalgo/source/io/GeoJSONExport.hpp
